[package]
name = "racetotheright"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
socketioxide = "0.14"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }